@@ -16,6 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<junit.version>5.7.0</junit.version>
+		<mockito.version>4.6.1</mockito.version>
 	</properties>
 	
 	<scm>
@@ -64,15 +65,13 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>8</release>
 				</configuration>
 				<executions>
 					<execution>
 						<id>default-compile</id>
 						<configuration>
-							<source>11</source>
-							<target>11</target>
+							<release>11</release>
 						</configuration>
 					</execution>
 					<execution>
@@ -89,8 +88,7 @@
 					<execution>
 						<id>default-testCompile</id>
 						<configuration>
-							<source>11</source>
-							<target>11</target>
+							<release>11</release>
 						</configuration>
 					</execution>
 				</executions>
@@ -103,9 +101,10 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<trimStackTrace>false</trimStackTrace>
-					<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation
+					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation
 					--add-modules jakarta.inject,java.inject
-					--add-opens space.arim.injector/space.arim.injector.internal.spec=ALL-UNNAMED</argLine>
+					--add-opens space.arim.injector/space.arim.injector.internal.spec=ALL-UNNAMED
+					--add-opens space.arim.injector/space.arim.injector.internal.provider=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
@@ -234,6 +233,12 @@
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject-tck</artifactId>
 			<version>1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
